<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:id="@+id/layout_sports">

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sports_header"
        app:layout_constraintVertical_bias="0"/>

    <TextView
        android:id="@+id/sports_header"
        style="@style/TextAppearance.AppCompat.Display2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sports"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"/>

    <TextView
        android:id="@+id/cricket_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:text="Cricket"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0"
        android:drawableLeft="@drawable/ic_person_black_24dp" />

    <TextView
        android:id="@+id/soccer_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:text="Soccer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cricket_textview"
        app:layout_constraintVertical_bias="0"
        android:drawableLeft="@drawable/ic_person_black_24dp" />

    <TextView
        android:id="@+id/volley_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:text="Volley Ball"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soccer_textview"
        app:layout_constraintVertical_bias="0"
        android:drawableLeft="@drawable/ic_person_black_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>

